--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -129,7 +129,7 @@ jobs:
           Inputs=$Inputs"\"RestoreDatetime\": \"${RestoreDatetime}\","
           Inputs=$Inputs"\"SkipAudit\": \"${SkipAudit}\","
           Inputs=$Inputs"\"SourceCodeVersion\": \"$SourceCodeVersion\","
-          Inputs=$Inputs"\"SourceConfigVersion\": \"$SourceConfigVersion\"
+          Inputs=$Inputs"\"SourceConfigVersion\": \"$SourceConfigVersion\""
           Inputs=$Inputs"}"
           echo "DuplicateTarget=environment_name_$(echo ${{ TargetEnvironment }} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_${{ github.event.inputs.TargetHost }}" >> $GITHUB_OUTPUT
           echo "Inputs="$(echo $Inputs | jq @json)
@@ -379,7 +379,7 @@ jobs:
           -e source_db_backup_s3_bucket_name=${{ needs.oracle-rman-export-schema.outputs.SourceDbBackupS3BucketName }}"
 
   oracle-rman-duplicate:
-    if: ${{ (success() || contains(needs.oracle-rman-import-schema.result,'skipped')) && ${{ github.event_name != 'repository_dispatch' }} }}
+    if: ${{ (success() || contains(needs.oracle-rman-import-schema.result,'skipped')) && github.event_name != 'repository_dispatch' }} }}
     name: oracle-rman-duplicate
     environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
     runs-on: ubuntu-latest
