--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -95,49 +95,46 @@ jobs:
         id: preparation
         shell: bash
         run: |
-          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]
+          TargetEnvironment="${{ github.event.inputs.TargetEnvironment }}"
+          TargetHost="${{ github.event.inputs.TargetHost }}"
+          SourceLegacy="${{ github.event.inputs.SourceLegacy }}"
+          SourceDb="${{ github.event.inputs.SourceLegacy }}"
+          S3SourceBucket="${{ github.event.inputs.S3SourceBucket }}"
+          RestoreDatetime="${{ github.event.inputs.RestoreDatetime }}"
+          SkipAudit="${{ github.event.inputs.SkipAudit }}"
+          SourceCodeVersion="${{ github.event.inputs.SourceCodeVersion }}"
+          SourceConfigVersion="${{ github.event.inputs.SourceConfigVersion }}"
+
+          # Check the combination of Source Database and Source Bucket is correct if NOT duplicating from AWS legacy
+          if [[ "${SourceLegacy}" == "no" ]]
           then
-            TargetEnvironment="${{ github.event.inputs.TargetEnvironment }}"
-            TargetHost="${{ github.event.inputs.TargetHost }}"
-            SourceLegacy="${{ github.event.inputs.SourceLegacy }}"
-            SourceDb="${{ github.event.inputs.SourceLegacy }}"
-            S3SourceBucket="${{ github.event.inputs.S3SourceBucket }}"
-            RestoreDatetime="${{ github.event.inputs.RestoreDatetime }}"
-            SkipAudit="${{ github.event.inputs.SkipAudit }}"
-            SourceCodeVersion="${{ github.event.inputs.SourceCodeVersion }}"
-            SourceConfigVersion="${{ github.event.inputs.SourceConfigVersion }}"
-
-            # Check the combination of Source Database and Source Bucket is correct if NOT duplicating from AWS legacy
-            if [[ "${SourceLegacy}" == "no" ]]
+            # Find the source bucket environment and source database environment
+            SourceBucketEnvironment=$(echo ${S3SourceBucket} | awk -F- '{print $1}')
+            SourceDatabaseEnvironment=$(echo ${SourceDb} |cut -c1-3)
+            if [[ ("${SourceBucketEnvironment}" == "prod" &&  "${SourceDatabaseEnvironment}" != "PRD") ||
+                  ("${SourceBucketEnvironment}" == "dev" &&  "${SourceDatabaseEnvironment}" != "DMD") ]]
             then
-              # Find the source bucket environment and source database environment
-              SourceBucketEnvironment=$(echo ${S3SourceBucket} | awk -F- '{print $1}')
-              SourceDatabaseEnvironment=$(echo ${SourceDb} |cut -c1-3)
-              if [[ ("${SourceBucketEnvironment}" == "prod" &&  "${SourceDatabaseEnvironment}" != "PRD") ||
-                    ("${SourceBucketEnvironment}" == "dev" &&  "${SourceDatabaseEnvironment}" != "DMD") ]]
-              then
-                echo "Combination of Source Database and Source Bucket is incorrect, please investigate!"
-                exit 1
-              fi
+              echo "Combination of Source Database and Source Bucket is incorrect, please investigate!"
+              exit 1
             fi
-
-            # Build a JSON variable capturing all the inputs which have been supplied
-            Inputs="{"
-            Inputs=$Inputs"\"TargetEnvironment\": \"$TargetEnvironment\","
-            Inputs=$Inputs"\"TargetHost\": \"$TargetHost\","
-            Inputs=$Inputs"\"SourceLegacy\": \"$SourceLegacy\","
-            Inputs=$Inputs"\"SourceDb\": \"$SourceDb\","
-            Inputs=$Inputs"\"S3SourceBucket\": \"${S3SourceBucket}\","
-            Inputs=$Inputs"\"RestoreDatetime\": \"${RestoreDatetime}\","
-            Inputs=$Inputs"\"SkipAudit\": \"${SkipAudit}\","
-            Inputs=$Inputs"\"SourceCodeVersion\": \"$SourceCodeVersion\","
-            Inputs=$Inputs"\"SourceConfigVersion\": \"$SourceConfigVersion\""
-            Inputs=$Inputs"}"
-            echo "DuplicateTarget=environment_name_$(echo ${{ TargetEnvironment }} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_${{ github.event.inputs.TargetHost }}" >> $GITHUB_OUTPUT
-            echo "Inputs="$(echo $Inputs | jq @json)
-            echo "Inputs="$(echo $Inputs | jq @json) >> $GITHUB_OUTPUT
-
           fi
+
+          # Build a JSON variable capturing all the inputs which have been supplied
+          Inputs="{"
+          Inputs=$Inputs"\"TargetEnvironment\": \"$TargetEnvironment\","
+          Inputs=$Inputs"\"TargetHost\": \"$TargetHost\","
+          Inputs=$Inputs"\"SourceLegacy\": \"$SourceLegacy\","
+          Inputs=$Inputs"\"SourceDb\": \"$SourceDb\","
+          Inputs=$Inputs"\"S3SourceBucket\": \"${S3SourceBucket}\","
+          Inputs=$Inputs"\"RestoreDatetime\": \"${RestoreDatetime}\","
+          Inputs=$Inputs"\"SkipAudit\": \"${SkipAudit}\","
+          Inputs=$Inputs"\"SourceCodeVersion\": \"$SourceCodeVersion\","
+          Inputs=$Inputs"\"SourceConfigVersion\": \"$SourceConfigVersion\""
+          Inputs=$Inputs"}"
+          echo "DuplicateTarget=environment_name_$(echo ${TargetEnvironment} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_${TargetHost}" >> $GITHUB_OUTPUT
+          echo "Inputs="$(echo $Inputs | jq @json)"
+          echo "Inputs="$(echo $Inputs | jq @json)" >> $GITHUB_OUTPUT
+
       - name: Check Restore DateTime Input
         if: ${{ github.event.inputs.RestoreDateTime != '' }}
         shell: bash
