Remove curly brackets and reposition duplicate target

--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -104,7 +104,7 @@ jobs:
           SkipAudit="${{ github.event.inputs.SkipAudit }}"
           SourceCodeVersion="${{ github.event.inputs.SourceCodeVersion }}"
           SourceConfigVersion="${{ github.event.inputs.SourceConfigVersion }}"
-
+          echo "DuplicateTarget=environment_name_$(echo ${TargetEnvironment} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_${TargetHost}" >> $GITHUB_OUTPUT
           # Check the combination of Source Database and Source Bucket is correct if NOT duplicating from AWS legacy
           if [[ "${SourceLegacy}" == "no" ]]
           then
@@ -131,7 +131,6 @@ jobs:
           Inputs=$Inputs"\"SourceCodeVersion\": \"$SourceCodeVersion\","
           Inputs=$Inputs"\"SourceConfigVersion\": \"$SourceConfigVersion\""
           Inputs=$Inputs"}"
-          echo "DuplicateTarget=environment_name_$(echo ${TargetEnvironment} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_${TargetHost}" >> $GITHUB_OUTPUT
           echo "Inputs="$(echo $Inputs | jq @json)"
           echo "Inputs="$(echo $Inputs | jq @json)" >> $GITHUB_OUTPUT
 
@@ -379,7 +378,7 @@ jobs:
           -e source_db_backup_s3_bucket_name=${{ needs.oracle-rman-export-schema.outputs.SourceDbBackupS3BucketName }}"
 
   oracle-rman-duplicate:
-    if: ${{ (success() || contains(needs.oracle-rman-import-schema.result,'skipped')) && github.event_name != 'repository_dispatch' }} }}
+    if: ${{ (success() || contains(needs.oracle-rman-import-schema.result,'skipped')) && github.event_name != 'repository_dispatch' }}
     name: oracle-rman-duplicate
     environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
     runs-on: ubuntu-latest
