--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -131,8 +131,8 @@ jobs:
           Inputs=$Inputs"\"SourceCodeVersion\": \"$SourceCodeVersion\","
           Inputs=$Inputs"\"SourceConfigVersion\": \"$SourceConfigVersion\""
           Inputs=$Inputs"}"
-          echo "Inputs="$(echo $Inputs | jq @json)"
-          echo "Inputs="$(echo $Inputs | jq @json)" >> $GITHUB_OUTPUT
+          echo "Inputs="$(echo $Inputs | jq @json)
+          echo "Inputs="$(echo $Inputs | jq @json) >> $GITHUB_OUTPUT
 
       - name: Check Restore DateTime Input
         if: ${{ github.event.inputs.RestoreDateTime != '' }}
@@ -446,7 +446,7 @@ jobs:
           fi        
           export ANSIBLE_CONFIG=$ansible_config
           $ansible_playbook_directory/rman-duplicate.yml -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -i $inventory \
-          -e duplicate_target=${{ needs.oracle-rman-pre-duplicate.outputs.DuplicateTarget }} ${extra_vars} -e json_inputs="${{ needs.oracle-rman-pre-duplicate.outputs.Inputs }}"
+          -e duplicate_target=${{ needs.oracle-rman-pre-duplicate.outputs.DuplicateTarget }} ${extra_vars} -e repository_dispatch="${{ github.repository }}" -e json_inputs="${{ needs.oracle-rman-pre-duplicate.outputs.Inputs }}"
 
   oracle-rman-duplicate-check:
     if: ${{ github.event_name == 'repository_dispatch' }}
