--- a/playbooks/oracle_duplicate/rman-duplicate.yml
+++ b/playbooks/oracle_duplicate/rman-duplicate.yml
@@ -134,7 +134,7 @@
 
         - name: Generate Command to Run RMAN Script
           set_fact:
-            run_rman_script: '/home/oracle/admin/rman_scripts/rman_duplicate_test.sh -d {{ database_primary_sid}} -s {{ source_db }} -c "{{ catalog }}" {{ local_disk_backup | default() }} {{ rman_datetime_option | default() }} {{ ssm_parameter_option|default() }} {{ source_catalog_schema_option|default() }} "{{ spfile_parameters_option|default()|trim }}"'
+            run_rman_script: '/home/oracle/admin/rman_scripts/rman_duplicate_test.sh -d {{ database_primary_sid}} -s {{ source_db }} -c "{{ catalog }}" {{ local_disk_backup | default() }} {{ rman_datetime_option | default() }} {{ ssm_parameter_option|default() }} {{ source_catalog_schema_option|default() }} "{{ spfile_parameters_option|default()|trim }}" {{ repository_dispatch_flag|default() }}'
 
         - name: Show Script to Run
           debug:
