--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -457,14 +457,25 @@ jobs:
     continue-on-error: false
     outputs:
       TargetEnvironment: ${{ steps.response.outputs.TargetEnvironment }}
+      TargetHost: ${{ steps.response.outputs.TargetHost }}
+      DuplicateTarget: ${{ steps.response.outputs.DuplicateTarget }}
+      SourceConfigVersion: ${{ steps.response.outputs.SourceConfigVersion }}
+      SourceCodeVersion: ${{ steps.response.outputs.SourceCodeVersion }}
       JobId: ${{ github.job }}
     steps:
 
       - name: Responding to Repository Dispatch event
         id: response
         run: |
+          echo "${{ github.event.client_payload }}"
           Inputs='${{ toJson(github.event.client_payload) }}'
-          echo "TargetEnvironment=$(echo $Inputs | jq -r '.TargetEnvironment')" >> $GITHUB_OUTPUT
+          TargetEnvironment=$(echo $Inputs | jq -r '.TargetEnvironment')
+          TargetHost=$(echo $Inputs | jq -r '.TargetHost')
+          echo "TargetEnvironment=${TargetEnvironment}" >> $GITHUB_OUTPUT
+          echo "TargetHost=${TargetHost}" >> $GITHUB_OUTPUT
+          echo "SourceConfigVersion=$(echo $Inputs | jq -r '.SourceConfigVersion')" >> $GITHUB_OUTPUT
+          echo "SourceCodeVersion=$(echo $Inputs | jq -r '.SourceCodeVersion')" >> $GITHUB_OUTPUT
+          echo "DuplicateTarget=environment_name_$(echo ${TargetEnvironment} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_${TargetHost}" >> $GITHUB_OUTPUT
           Action='${{ github.event.action }}'
           if [[ "$Action" == "oracle-rman-duplicate-success" ]]; then
             DuplicateStatus="success"
@@ -483,6 +494,10 @@ jobs:
     needs: [oracle-rman-duplicate-check]
     timeout-minutes: 1440
     continue-on-error: false
+    env:
+      DuplicateTarget: ${{ needs.oracle-rman-duplicate-check.outputs.DuplicateTarget }}
+      SourceConfigVersion: ${{ needs.oracle-rman-duplicate-check.outputs.SourceConfigVersion }}
+      SourceCodeVersion: ${{ needs.oracle-rman-duplicate-check.outputs.SourceCodeVersion }}
     outputs:
       JobId: ${{ github.job }}
     steps:
@@ -503,7 +518,7 @@ jobs:
             common/*
             playbooks/ansible.cfg
           path: operations
-          ref: ${{ github.event.inputs.SourceCodeVersion }}
+          ref: ${{ env.SourceCodeVersion }}
           fetch-depth: 0
 
       - name: Checkout Ansible Inventory From modernisation-platform-configuration-management
@@ -515,7 +530,7 @@ jobs:
             ansible/hosts
             ansible/group_vars
           path: inventory
-          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          ref: ${{ env.SourceConfigVersion }}
           fetch-depth: 0
 
       - name: Checkout Ansible Required Roles From modernisation-platform-configuration-management
@@ -527,7 +542,7 @@ jobs:
             ansible/roles/secretsmanager-passwords
             ansible/roles/get-modernisation-platform-facts
           path: roles
-          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          ref: ${{ env.SourceConfigVersion }}
           fetch-depth: 0
 
       - name: Configure AWS Credentials
@@ -544,7 +559,7 @@ jobs:
           export ANSIBLE_CONFIG=$ansible_config
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_duplicate/roles
           echo "$ansible_playbook_directory/rman-post-duplicate.yml -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -i $inventory \
-          -e duplicate_target=${{ needs.oracle-rman-pre-duplicate.outputs.DuplicateTarget }}"
+          -e duplicate_target=${{ env.DuplicateTarget }}"
 
   oracle-build-ha:
     name: oracle-build-ha
@@ -555,6 +570,11 @@ jobs:
     needs: [oracle-rman-duplicate-check,oracle-rman-post-duplicate]
     timeout-minutes: 1440
     continue-on-error: false
+    env:
+      DuplicateTarget: ${{ needs.oracle-rman-duplicate-check.outputs.DuplicateTarget }}
+      TargetHost: ${{ needs.oracle-rman-duplicate-check.outputs.TargetHost }}
+      SourceConfigVersion: ${{ needs.oracle-rman-duplicate-check.outputs.SourceConfigVersion }}
+      SourceCodeVersion: ${{ needs.oracle-rman-duplicate-check.outputs.SourceCodeVersion }}
     outputs:
       JobId: ${{ github.job }}
     steps:
@@ -568,7 +588,7 @@ jobs:
             ansible/hosts
             ansible/group_vars
           path: inventory
-          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          ref: ${{ env.SourceConfigVersion }}
           fetch-depth: 0
 
       - name: Install yq
@@ -582,8 +602,8 @@ jobs:
         id: standbydbsconfigured
         working-directory: ${{ env.inventory }}
         run: |
-          database_type=$(echo ${{ github.event.inputs.TargetHost }} | cut -d_ -f1)
-          database_environment=$(echo ${{ needs.oracle-rman-pre-duplicate.outputs.DuplicateTarget }} | awk -F_${{ github.event.inputs.TargetHost }} '{print $1}')
+          database_type=$(echo ${{ env.TargetHost }} | cut -d_ -f1)
+          database_environment=$(echo ${{ env.DuplicateTarget }} | awk -F_${{ env.TargetHost }} '{print $1}')
           high_availability_count=$(yq .high_availability_count.${database_type} group_vars/${database_environment}_all.yml)
           if [[ ${high_availability_count} -eq 0 ]]
           then
@@ -592,15 +612,15 @@ jobs:
           fi
           if [[ ${high_availability_count} -ge 1 ]]
           then
-            echo "standbydb1Host=$(echo ${{ needs.oracle-rman-pre-duplicate.outputs.DuplicateTarget }} | sed 's/primarydb/standbydb1/')"  >> $GITHUB_OUTPUT
+            echo "standbydb1Host=$(echo ${{ env.DuplicateTarget }} | sed 's/primarydb/standbydb1/')"  >> $GITHUB_OUTPUT
           fi
           if [[ ${high_availability_count} -eq 2 ]]
           then
-            echo "standbydb2Host=$(echo ${{ needs.oracle-rman-pre-duplicate.outputs.DuplicateTarget }} | sed 's/primarydb/standbydb2/')" >> $GITHUB_OUTPUT
+            echo "standbydb2Host=$(echo ${{ env.DuplicateTarget }} | sed 's/primarydb/standbydb2/')" >> $GITHUB_OUTPUT
           fi
           echo "high_availability_count=${high_availability_count}" >> $GITHUB_OUTPUT
 
-          fsfo_mode=$(yq '.fsfo_mode' group_vars/${{ needs.oracle-rman-pre-duplicate.outputs.DuplicateTarget }}.yml)
+          fsfo_mode=$(yq '.fsfo_mode' group_vars/${{ env.DuplicateTarget }}.yml)
           [ "$fsfo_mode" == "null" ] && echo 'fsfo_mode="disabled"' >> $GITHUB_OUTPUT || echo "fsfo_mode=$fsfo_mode" >> $GITHUB_OUTPUT
 
       - name: Checkout From hmpps-delius-operational-automation
@@ -612,7 +632,7 @@ jobs:
             playbooks/oracle_ha
             playbooks/ansible.cfg
           path: operations
-          ref: ${{ github.event.inputs.SourceCodeVersion }}
+          ref: ${{ env.SourceCodeVersion }}
           fetch-depth: 0
 
       - name: Configure AWS Credentials
@@ -629,7 +649,7 @@ jobs:
           export ANSIBLE_CONFIG=$ansible_config
           $command -i $inventory \
           -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
-          -e primary=${{ needs.oracle-rman-pre-duplicate.outputs.DuplicateTarget }} \
+          -e primary=${{ env.DuplicateTarget }} \
           -e standby=${{ steps.standbydbsconfigured.outputs.standbydb1Host }} \
           -e method=build \
           -e high_availability_count=${{ steps.standbydbsconfigured.outputs.high_availability_count }} \
@@ -643,7 +663,7 @@ jobs:
           export ANSIBLE_CONFIG=$ansible_config
           $command -i $inventory \
           -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
-          -e primary=${{ needs.oracle-rman-pre-duplicate.outputs.DuplicateTarget }} \
+          -e primary=${{ env.DuplicateTarget }} \
           -e standby=${{ steps.standbydbsconfigured.outputs.standbydb2Host }} \
           -e method=build \
           -e high_availability_count=${{ steps.standbydbsconfigured.outputs.high_availability_count }} \
@@ -658,6 +678,8 @@ jobs:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
     needs: [oracle-rman-pre-duplicate,oracle-rman-export-schema,oracle-rman-import-schema,oracle-rman-duplicate,oracle-rman-duplicate-check,oracle-rman-post-duplicate,oracle-build-ha]
     environment: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.TargetEnvironment || needs.oracle-rman-duplicate-check.outputs.TargetEnvironment }}-preapproved
+    env:
+      DuplicateTarget: ${{ github.event_name == 'workflow_dispatch' && needs.oracle-rman-pre-duplicate.outputs.DuplicateTarget || needs.oracle-rman-duplicate-check.outputs.DuplicateTarget }}
     steps:
 
       - name: Configure AWS Credentials
@@ -738,7 +760,7 @@ jobs:
                           },
                           {
                             "type": "mrkdwn",
-                            "text": "*Duplicate Target:*\n${{ needs.oracle-rman-pre-duplicate.outputs.DuplicateTarget }}"
+                            "text": "*Duplicate Target:*\n${{ env.DuplicateTarget }}"
                           }
                         ]
                     }  
