--- a/playbooks/oracle_duplicate/rman-duplicate.yml
+++ b/playbooks/oracle_duplicate/rman-duplicate.yml
@@ -126,22 +126,22 @@
       block:
         - name: Install RMAN script
           copy:
-            src: rman_duplicate_test.sh
-            dest: /home/oracle/admin/rman_scripts/rman_duplicate_test.sh
+            src: rman_duplicate.sh
+            dest: /home/oracle/admin/rman_scripts/rman_duplicate.sh
             owner: oracle
             group: oinstall
             mode: 0744
 
         - name: Generate Command to Run RMAN Script
           set_fact:
-            run_rman_script: '/home/oracle/admin/rman_scripts/rman_duplicate_test.sh -d {{ database_primary_sid}} -s {{ source_db }} -c "{{ catalog }}" {{ local_disk_backup | default() }} {{ rman_datetime_option | default() }} {{ ssm_parameter_option|default() }} {{ source_catalog_schema_option|default() }} "{{ spfile_parameters_option|default()|trim }}" {{ repository_dispatch_flag|default() }}'
+            run_rman_script: '/home/oracle/admin/rman_scripts/rman_duplicate.sh -d {{ database_primary_sid}} -s {{ source_db }} -c "{{ catalog }}" {{ local_disk_backup | default() }} {{ rman_datetime_option | default() }} {{ ssm_parameter_option|default() }} {{ source_catalog_schema_option|default() }} "{{ spfile_parameters_option|default()|trim }}" {{ repository_dispatch_flag|default() }}'
 
         - name: Show Script to Run
           debug:
             msg: "Running: {{ run_rman_script }}"
 
         - name: Running RMAN script
-          shell: "{{ run_rman_script }} &> /home/oracle/admin/rman_scripts/rman_duplicate_script_test_$( date +%Y%m%d%H%M ).log"
+          shell: "{{ run_rman_script }} &> /home/oracle/admin/rman_scripts/rman_duplicate_script_$( date +%Y%m%d%H%M ).log"
           async: 57600
           poll: 0
           args:
