--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -378,7 +378,7 @@ jobs:
           -e source_db_backup_s3_bucket_name=${{ needs.oracle-rman-export-schema.outputs.SourceDbBackupS3BucketName }}
 
   oracle-rman-duplicate:
-    if: ${{ (contains(needs.oracle-rman-pre-duplicate.result,'success') && (contains(needs.oracle-rman-import-schema.result,'skipped') || contains(needs.oracle-rman-import-schema.result,'success'))) && github.event_name != 'repository_dispatch' }}
+    if: ${{ ( needs.oracle-rman-pre-duplicate.result == 'success' && ( needs.oracle-rman-import-schema.result == 'skipped' || needs.oracle-rman-import-schema.result == 'success')) && github.event_name != 'repository_dispatch' }}
     name: oracle-rman-duplicate
     environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
     runs-on: ubuntu-latest
