--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -378,13 +378,14 @@ jobs:
           -e source_db_backup_s3_bucket_name=${{ needs.oracle-rman-export-schema.outputs.SourceDbBackupS3BucketName }}
 
   oracle-rman-duplicate:
-    if: ${{ ( needs.oracle-rman-pre-duplicate.result == 'success' && ( needs.oracle-rman-import-schema.result == 'skipped' || needs.oracle-rman-import-schema.result == 'success')) && github.event_name != 'repository_dispatch' }}
+    if: success('oracle-rman-pre-duplicate')
+    # if: ${{ ( needs.oracle-rman-pre-duplicate.result == 'success' && ( needs.oracle-rman-import-schema.result == 'skipped' || needs.oracle-rman-import-schema.result == 'success')) && github.event_name != 'repository_dispatch' }}
     name: oracle-rman-duplicate
     environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
-    needs: [oracle-rman-import-schema, oracle-rman-pre-duplicate]
+    needs: [oracle-rman-pre-duplicate]
     timeout-minutes: 1440
     continue-on-error: false
     env:
