--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -361,7 +361,7 @@ jobs:
             else
                 echo "Invalid JSON in $SSMParameter - resetting to Inactive"
                 SSMParameterValue="{\"Phase\":\"Inactive\"}"
-                aws ssm put-parameter --region ${AWS_REGION} --name "$SSMParameter" --type String --overwrite --value "$(echo $SSMParameterValue | jq @json)"
+                aws ssm put-parameter --region ${AWS_REGION} --name "$SSMParameter" --type String --overwrite --value "$SSMParameterValue"
                 PHASE="Inactive"
             fi
             # Initialize the Backup Status for this RMAN Backup Target
