--- a/.github/workflows/iaps-data-refresh.yml
+++ b/.github/workflows/iaps-data-refresh.yml
@@ -1,5 +1,5 @@
 ---
-name: delius-iaps-data-refresh
+name: "IAPS: Data Refresh"
 permissions:
   id-token: write # This is required for requesting the JWT
   contents: read # This is required for actions/checkout
