--- a/playbooks/oracle_release_update/update_oem/tasks/main.yml
+++ b/playbooks/oracle_release_update/update_oem/tasks/main.yml
@@ -12,4 +12,4 @@
     agent_host: "{{ get_name_of_host.stdout }}"
 
 - name: Update Targets
-  include: update_agent_targets.yml
+  include_tasks: update_agent_targets.yml
