--- a/.github/workflows/ldap-user-expiry-cron.yml
+++ b/.github/workflows/ldap-user-expiry-cron.yml
@@ -2,6 +2,7 @@ name: "LDAP: User Expiry Cron"
 on:
   schedule:
     - cron: "30 3 * * *"
+  workflow_call:
 
 jobs:
   expire-users:
@@ -14,3 +15,5 @@ jobs:
     uses: ./.github/workflows/ldap-user-expiry.yaml
     with:
       environment: ${{matrix.environment}}
+    secrets:
+      PWO_PUBLIC_SLACK_WEBHOOK_URL:  ${{ secrets.PWO_PUBLIC_SLACK_WEBHOOK_URL}}
