--- a/.github/workflows/oracle-db-delius-operational-artefacts.yml
+++ b/.github/workflows/oracle-db-delius-operational-artefacts.yml
@@ -49,6 +49,13 @@ on:
         options:
           - "yes"
           - "no"
+      DeployAuditCompressionJob:
+        description: "Create Delius Audited Interaction Data Compression Job"
+        type: choice
+        default: "no"
+        options:
+          - "yes"
+          - "no"
       SourceCodeVersion:
         description: "Source version for the  hmpps-delius-operation-automation. Enter a pull request, branch, commit ID, tag, or reference."
         type: string
@@ -152,3 +159,4 @@ jobs:
           -e deploy_audit_stub_users=${{ github.event.inputs.DeployAuditStubUsers }} \
           -e deploy_plan_management=${{ github.event.inputs.DeployPlanManagement }} \
           -e deploy_mv_refresh_purge_child=${{ github.event.inputs.DeployMVRefreshPurgeChildCursors }}
+          -e deploy_audit_compression_job=${{ github.event.DeployAuditCompressionJob }}
