--- a/.github/workflows/oracle-db-delius-operational-artefacts.yml
+++ b/.github/workflows/oracle-db-delius-operational-artefacts.yml
@@ -151,6 +151,7 @@ jobs:
       - name: Run Delius Artefacts Playbook
         run: |
           export ANSIBLE_CONFIG=$ansible_config
+          echo "Deploy ACJ: "{{ github.event.DeployAuditCompressionJob }}
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
           -e @$inventory/group_vars/${{ steps.prepareinventorynames.outputs.allHost }}.yml \
           -e hosts=${{ steps.prepareinventorynames.outputs.hosts }} \
