change to workflow dispatch

--- a/.github/workflows/ldap-remove-user-passwords.yaml
+++ b/.github/workflows/ldap-remove-user-passwords.yaml
@@ -1,21 +1,16 @@
 name: "LDAP: User Expiry"
 on:
-  # workflow_dispatch:
-  #   inputs:
-  #     environment:
-  #       description: "The environment to run the task in"
-  #       required: true
-  #       type: choice
-  #       options:
-  #         - "dev"
-  #         - "test"
-  workflow_call:
-    inputs:
-      environment:
-        type: string
-    secrets:
-      PWO_PUBLIC_SLACK_WEBHOOK_URL:
-        required: true
+   workflow_dispatch:
+     inputs:
+       environment:
+         description: "The environment to run the task in"
+         required: true
+         type: choice
+         options:
+           - "dev"
+           - "test"
+           - "stage"
+           - "preprod"
 
 jobs:
   deploy:
